# pipes-sqlite-simple

./: default.nix  pipes-sqlite-simple.cabal  result
Pipes/: SQLite.hs
nix/: sources.json
