cabal-version: 2.2

name:                pipes-sqlite-simple
version:             0.2
synopsis:            Functions that smash Pipes and sqlite-simple together
description:         Functions that smash Pipes and sqlite-simple together
license: BSD-3-Clause
license-file:        LICENSE
author:              Nick Partridge
maintainer:          nkpart@gmail.com
-- copyright:
category:            Database
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/nkpart/pipes-sqlite-simple

library
  default-language: Haskell2010
  exposed-modules:
    Pipes.SQLite
  ghc-options:
    -Wall
  build-depends:
    base >= 4.7 && < 5,
    text >= 1.1 && < 2,
    pipes >= 4.1 && < 5,
    pipes-safe >= 2.2 && < 3,
    sqlite-simple ^>= 0.4,
